# ECOSYS

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  blk11a.h  blk11b.h  blk12a.h  blk12b.h  blk13c.h  blk14.h  blk15a.h  blk18a.h  blk18b.h  blk1cp.h  blk1g.h  blk1p.h  blk1s.h  blk1u.h  blk20a.h  blk20c.h  blk20d.h  blk21a.h  blk22a.h  blk5.h  blk8a.h  blk8b.h  blk9a.h  blk9b.h  blktest.h  build_ecosys  ecosys_output_rows.xlsx  filec.h
cmake/Modules/: add_ecosys_executable.cmake  add_ecosys_library.cmake  add_ecosys_pfunit_test.cmake  add_ecosys_regression_test.cmake  set_up_compilers.cmake  set_up_platform.cmake
data/Warm Temperate Maize-Soybean Irrigated NB/: References Warm Temperate Maize-Soybean Irrigated.docx  logfile1  maiz31  me01f  me01i  me01m  me01p1  me01y  me02i  me02m  me02p1  me02w.csv  me02y  me02yx  me03f  me03i  me03m  me03p1  me03y  me03yx  me04i  me04m  me04p1  me04y  me05f  me05i  me05m  me05p  me05p1  me05w.csv  me05y  me06i  me06m  me06p1  me06y  runfile  runirr  sceh1  scnd1  scpd1  (+1 more)
data/cool_temp_maize-soybean/: Pf21998  Qf21998  f25fr02  f25m00  f25m01  f25p01  f25plt03  f25wd1  f25y22x  gbf00h  gbf98h
data/cool_temp_maize-soybean/outputs/: 010101998f25wd1  010111998f25ch1  010111998f25nd1  (+18 more)
data/dev_cool_temp_maize-soybean/: Nf21998  Pf21998  Psi1998  Wf21998  Wsi1998  disturbances00  disturbances01  disturbances02  f25fr79  f25plt02  f25til98  f25til99  fertilizer01  flux_soc_out  land_00  land_01  land_02  land_03  land_98  land_99  logfile1  logfile2  logfile3  n_outs  plant_00  plant_01  plant_02  plant_03  plant_98  plant_99  planting01  planting98  runfile  t_outs  topography  weather_opts01
data/warm_temp_maize-soybean_dryland/: Csi2001  Msi2001  Nme2001  Nsi2001  Psi2001  Qsi2001  References Warm Temperate Maize-Soybean Dryland.docx  Rsi2001  Wme2001  Wsi2001  disturbances1  disturbances5  fertilizer1  fertilizer3  fertilizer5  flux_soc_out  land_01  land_03  land_04  land_05  land_06  logfile1  n_flux_out  plant_01  plant_02  plant_03  plant_04  plant_05  plant_06  planting1  planting2  planting3  runfile  sbee31  topography  weather_01.csv  weather_03.csv  weather_04.csv  weather_opts01  weather_opts03  (+2 more)
examples/: ._sample_run
examples/DukeForest/: 010101800dc  010101800dw  010101801dc  010101801dw  010101802dc  010101802dw  010101803dc  010101803dw  010101804dc  010101804dw  010101805dc  010101805dw  010101806dc  010101806dw  010101807dc  010101807dw  010101808dc  010101808dw  010101809dc  010101809dw  010101810dc  010101810dw  010101811dc  010101811dw  010101812dc  010101812dw  010101813dc  010101813dw  010101814dc  010101814dw  010101815dc  010101815dw  010101816dc  010101816dw  010101817dc  010101817dw  010101818dc  010101818dw  010101819dc  010101819dw  (+1665 more)
examples/blodgett/: ENF234  ENF_g  ENF_p  dc  dh  dhh  dhw  dn  hc  hh  hw  opt1900  opt1980_s_1980  opt1981_s_1980  opt1982_s_1980  opt1983_s_1980  opt1984_s_1980  opt1985_s_1980  opt1986_s_1980  opt1987_s_1980  opt1988_s_1980  opt1989_s_1980  opt1990_s_1980  opt1991_s_1980  opt1992_s_1980  opt1993_s_1980  opt1994_s_1980  opt1995_s_1980  opt1996_s_1980  opt1997_s_1980  opt1998_s_1980  opt1999_s_1980  opt2000_s_1980  opt2001_s_1980  opt2002_s_1980  opt2003_s_1980  opt2004_s_1980  opt2005_s_1980  opt2006_s_1980  opt2007_s_1980  (+43 more)
examples/dryland_maize/: CheckOutput.ipynb  maiz31  me01p1  me01t  me01w.csv  me01y  me02p1  me02y  me03m  me03p1  me03y  me04p1  me04y  me05m  me05p1  me05y  me06p1  me06w.csv  me06y  mesite  mesoil  metopo  runfile  sccd1  scch1  sceh1  scnd1  scnh1  scpd1  scwd1  scwh1  soyb31  years
examples/lake/: ._runcheck99  clva35  clvs35  gr3a35  gr3s35  lake  runcheck  runcheck12  runcheck18  runcheck34  runcheck90  runcheck99  runlake  runlakei  sccd1  scch1  sced1  scnd1  scpd1  scwd1  scwh1  va00y  va00yx  va01w.csv  va01y  va02w.csv  va02y  va03w.csv  va03y  va04w.csv  va04y  va05w.csv  va05y  va06w.csv  va06y  va07w.csv  va07y  va08w.csv  va08y  va08yx  (+25 more)
examples/sample_run/: ._opt1838  bspruce2  dc  dh  dn  dw  gr3s62  grassp  ndlf62  opt1800  opt1801  opt1802  opt1803  opt1804  opt1805  opt1806  opt1807  opt1808  opt1809  opt1810  opt1811  opt1812  opt1813  opt1814  opt1815  opt1816  opt1817  opt1818  opt1819  opt1820  opt1821  opt1822  opt1823  opt1824  opt1825  opt1826  opt1827  opt1828  opt1829  opt1830  (+251 more)
f77src/: BLOCKDATA001.f  CMakeLists.txt  Makefile  blk10.h  blk11a.h  blk11b.h  blk12a.h  blk12b.h  blk13a.h  blk13b.h  blk13c.h  blk13d.h  blk14.h  blk15a.h  blk15b.h  blk16.h  blk17.h  blk18a.h  blk18b.h  blk19a.h  blk19b.h  blk19c.h  blk19d.h  blk1cr.h  blk1g.h  blk1n.h  blk1p.h  blk1s.h  blk20a.h  blk20b.h  blk20c.h  blk20d.h  blk20e.h  blk20f.h  blk21a.h  blk21b.h  blk22a.h  blk22b.h  blk22c.h  blk2a.h  (+56 more)
f77src/ecosys_core/: BLOCKDATA001.f  CMakeLists.txt  GSWP3_forcing_check.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  WC_forcing_check.ipynb  bkinit.f  blk10.h  blk11a.h  blk11b.h  blk12a.h  blk12b.h  blk13a.h  blk13b.h  blk13c.h  blk13d.h  blk14.h  blk15a.h  blk16.h  blk18a.h  blk18b.h  blk19a.h  blk19b.h  blk1cp.h  blk1cr.h  blk1g.h  blk1n.h  blk1p.h  blk1s.h  blk1u.h  blk20a.h  blk20b.h  blk20f.h  blk21a.h  blk21b.h  blk22b.h  blk2a.h  blk2b.h  blk2c.h  (+55 more)
f77src/ecosys_core/.ipynb_checkpoints/: GSWP3_forcing_check-checkpoint.ipynb  WC_forcing_check-checkpoint.ipynb  foutp-checkpoint.f  outsd-checkpoint.f  plot_forcing-checkpoint.ipynb  starts-checkpoint.f
f77src/ecosys_driver/: CMakeLists.txt  main.f  soil.f
f77src/ecosys_driver/.ipynb_checkpoints/: main-checkpoint.f
instructions/: Questions.txt  Readme.txt  atmospheric_output.txt  disturbances.txt  fertilizer.txt  land_management.txt  n2o_nh3_flux.txt  n_properties_output.txt  p_properties_out.txt  phosphorus_flux.txt  plant_management.txt  plating_data.txt  runfile.txt  site_data.txt  soil_data.txt  soil_output.txt  soil_output2.txt  soil_output3.txt  t_properties_out.txt  topography_data.txt  water_properties.txt  weather_data.ods  weather_options.txt  {crop_name}{numerical_koppen_climate}.txt
parallel_run/: driver_ecosys_DukeForest_mpi4py.py  simulator.py
(+221 files in other folders)
